# bbp_bot

./: .env.example  Cargo.toml  docker-compose.yaml  dockerfile
postgres/: queries.sql
src/: main.rs
src/commands/: bbp_commands.rs  bbpadd.rs  commands.rs  mod.rs
src/dataaccess/: postgres_service.rs
