[package]
name = "bbp_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bbp_bot"
path = "./src/main.rs"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.4"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio-postgres]
version = "0.7.8"

[dependencies.postgres-types]
version = "0.2.5"

[dependencies.postgres]
version = "0.19.5"
features = ["with-chrono-0_4"]

[dependencies]
dotenv = "0.15.0"
postgres-openssl = "0.5.0"
openssl = "0.10.68"
chrono = "0.4.39"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
poise = "0.6.1"
log = "0.4"
env_logger = "0.11.6"
